--- a/app/src/main/res/layout/games_layout.xml
+++ b/app/src/main/res/layout/games_layout.xml
@@ -5,11 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/background" >
 
-    <com.airbnb.lottie.LottieAnimationView
-        app:lottie_rawRes="@raw/lottie_stars_background"
-        style="@style/BackgroundLottieAnimation"
-        />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,9 +27,9 @@
 
         <Button
             android:id="@+id/colorPuzzleB"
+            android:text="@string/color_puzzle"
             style="@style/NavigationButton"
-            android:onClick="handleColorPuzzleButtonClick"
-            android:text="@string/color_puzzle" />
+            android:onClick="handleColorPuzzleButtonClick" />
 
     </LinearLayout>
 
