--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -23,7 +23,8 @@
         app:lottie_asyncUpdates="enabled"
         app:lottie_cacheComposition="true"
         app:lottie_rawRes="@raw/lottie_github"
-        android:onClick="handleGitHub"/>
+        android:onClick="handleGitHub"
+        android:stateListAnimator="@animator/pulse_animation"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -80,8 +81,7 @@
         android:layout_centerInParent="true"
         app:lottie_rawRes="@raw/lottie_coin_splash"
         app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true"
-        android:stateListAnimator="@animator/pulse_animation" />
+        app:lottie_cacheComposition="true" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lavCoinFlip"
