--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -51,12 +51,13 @@
     <!-- Explosion AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/explosionLAV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/lottie_explosion"
+        app:lottie_rawRes="@raw/lottie_strike"
         app:lottie_asyncUpdates="enabled"
         app:lottie_cacheComposition="true"
+        app:lottie_speed="2"
         android:visibility="gone" />
 
     <!-- Skip AnimationView -->
@@ -67,6 +68,16 @@
         android:layout_centerInParent="true"
         app:lottie_speed="2"
         app:lottie_rawRes="@raw/lottie_skip" />
+
+    <!-- Spotlight AnimationView -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/spotlightLAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:lottie_speed="2"
+        app:lottie_rawRes="@raw/lottie_spotlight"
+        android:visibility="gone"/>
 
     <!--Crown AnimationView-->
     <com.airbnb.lottie.LottieAnimationView
@@ -155,7 +166,7 @@
             android:layout_height="30dp"
             android:layout_alignParentBottom="true"
             android:padding="1dp"
-            android:src="@drawable/hint"
+            android:src="@drawable/spotlight"
             android:contentDescription="@string/image_description" />
 
         <TextView
@@ -187,8 +198,7 @@
             android:layout_width="80dp"
             android:layout_height="30dp"
             android:layout_alignParentBottom="true"
-            android:padding="1dp"
-            android:src="@drawable/skip"
+            android:src="@drawable/jump"
             android:contentDescription="@string/image_description" />
 
         <TextView
