--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -48,6 +48,21 @@
             />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/difficultyLAV"
+        android:background="@drawable/circle_background"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_toStartOf="@+id/settingIconIV"
+        android:layout_alignBottom="@+id/settingIconIV"
+        android:layout_marginEnd="30dp"
+        android:gravity="center"
+        android:paddingHorizontal="3dp"
+        android:paddingBottom="1dp"
+        android:stateListAnimator="@animator/pulse_animation"
+        android:onClick="handleDifficultyButton"
+        android:src="@drawable/difficulty2"/>
+
     <!-- Strike AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/strikeLAV"
@@ -63,11 +78,11 @@
     <!-- Jump AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/jumpLAV"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
+        app:lottie_rawRes="@raw/lottie_jump"
         app:lottie_speed="1.5"
-        app:lottie_rawRes="@raw/lottie_jump1"
         android:visibility="gone"/>
 
     <!-- Spotlight AnimationView -->
@@ -77,6 +92,17 @@
         android:layout_height="wrap_content"
         app:lottie_speed="2"
         app:lottie_rawRes="@raw/lottie_spotlight"
+        android:visibility="gone"/>
+
+    <!-- Contrast AnimationView -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/contrastLAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:rotation="270"
+        app:lottie_speed="2"
+        app:lottie_rawRes="@raw/lottie_contrast"
         android:visibility="gone"/>
 
     <!-- Crown AnimationView -->
@@ -117,106 +143,143 @@
         android:textAppearance="@style/default_font"
         android:textColor="@color/beige"/>
 
-    <!-- Strike RelativeLayout -->
-    <RelativeLayout
-        android:id="@+id/strikeRL"
-        android:layout_width="82dp"
-        android:layout_height="33dp"
+    <!-- PowerUps LinearLayout-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_above="@+id/resetTV"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="10dp"
-        android:onClick="handleStrikeClick"
-        android:stateListAnimator="@animator/pulse_animation" >
+        android:layout_marginBottom="10dp">
 
-        <ImageView
-            android:background="@drawable/ui_background"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:padding="2dp"
-            android:src="@drawable/strike"
-            android:contentDescription="@string/image_description" />
+        <!-- Strike RelativeLayout -->
+        <RelativeLayout
+            android:id="@+id/strikeRL"
+            android:layout_width="82dp"
+            android:layout_height="33dp"
+            android:onClick="handleStrikeClick"
+            android:stateListAnimator="@animator/pulse_animation"
+            android:layout_margin="5dp">
 
-        <TextView
-            android:id="@+id/strikeCountTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/circle_background"
-            android:paddingHorizontal="5dp"
-            android:textSize="12sp"
-            android:textAppearance="@style/default_font"
-            android:textColor="@color/gray"/>
+            <ImageView
+                android:background="@drawable/ui_background"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:padding="2dp"
+                android:src="@drawable/strike"
+                android:contentDescription="@string/image_description" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/strikeCountTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/circle_background"
+                android:paddingHorizontal="5dp"
+                android:textSize="12sp"
+                android:textAppearance="@style/default_font"
+                android:textColor="@color/gray"/>
 
-    <!-- Spotlight RelativeLayout -->
-    <RelativeLayout
-        android:id="@+id/spotlightRL"
-        android:layout_width="82dp"
-        android:layout_height="33dp"
-        android:layout_toStartOf="@+id/strikeRL"
-        android:layout_alignTop="@+id/strikeRL"
-        android:layout_marginHorizontal="20dp"
-        android:onClick="handleSpotlightClick"
-        android:stateListAnimator="@animator/pulse_animation">
+        </RelativeLayout>
 
-        <ImageView
-            android:background="@drawable/ui_background"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:padding="2dp"
-            android:src="@drawable/spotlight"
-            android:contentDescription="@string/image_description" />
+        <!-- Spotlight RelativeLayout -->
+        <RelativeLayout
+            android:id="@+id/spotlightRL"
+            android:layout_width="82dp"
+            android:layout_height="33dp"
+            android:onClick="handleSpotlightClick"
+            android:stateListAnimator="@animator/pulse_animation"
+            android:layout_margin="5dp">
 
-        <TextView
-            android:id="@+id/spotlightCountTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/circle_background"
-            android:paddingHorizontal="5dp"
-            android:textSize="12sp"
-            android:textAppearance="@style/default_font"
-            android:textColor="@color/gray"/>
+            <ImageView
+                android:background="@drawable/ui_background"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:padding="2dp"
+                android:src="@drawable/spotlight"
+                android:contentDescription="@string/image_description" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/spotlightCountTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/circle_background"
+                android:paddingHorizontal="5dp"
+                android:textSize="12sp"
+                android:textAppearance="@style/default_font"
+                android:textColor="@color/gray"/>
 
-    <!-- Jump RelativeLayout -->
-    <RelativeLayout
-        android:id="@+id/jumpRL"
-        android:layout_width="82dp"
-        android:layout_height="33dp"
-        android:layout_toEndOf="@+id/strikeRL"
-        android:layout_alignTop="@+id/strikeRL"
-        android:layout_marginHorizontal="20dp"
-        android:onClick="handleJumpClick"
-        android:stateListAnimator="@animator/pulse_animation">
+        </RelativeLayout>
 
-        <ImageView
-            android:background="@drawable/ui_background"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/jump"
-            android:contentDescription="@string/image_description" />
+        <!-- Contrast RelativeLayout -->
+        <RelativeLayout
+            android:id="@+id/contrastRL"
+            android:layout_width="82dp"
+            android:layout_height="33dp"
+            android:onClick="handleContrastClick"
+            android:stateListAnimator="@animator/pulse_animation"
+            android:layout_margin="5dp">
 
-        <TextView
-            android:id="@+id/jumpCountTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/circle_background"
-            android:paddingHorizontal="5dp"
-            android:textSize="12sp"
-            android:textAppearance="@style/default_font"
-            android:textColor="@color/gray"/>
+            <ImageView
+                android:background="@drawable/ui_background"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:padding="2dp"
+                android:src="@drawable/contrast"
+                android:contentDescription="@string/image_description" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/contrastCountTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/circle_background"
+                android:paddingHorizontal="5dp"
+                android:textSize="12sp"
+                android:textAppearance="@style/default_font"
+                android:textColor="@color/gray"/>
+
+        </RelativeLayout>
+
+        <!-- Jump RelativeLayout -->
+        <RelativeLayout
+            android:id="@+id/jumpRL"
+            android:layout_width="82dp"
+            android:layout_height="33dp"
+            android:onClick="handleJumpClick"
+            android:stateListAnimator="@animator/pulse_animation"
+            android:layout_margin="5dp">
+
+            <ImageView
+                android:background="@drawable/ui_background"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/jump"
+                android:contentDescription="@string/image_description" />
+
+            <TextView
+                android:id="@+id/jumpCountTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/circle_background"
+                android:paddingHorizontal="5dp"
+                android:textSize="12sp"
+                android:textAppearance="@style/default_font"
+                android:textColor="@color/gray"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <!-- Shadow  -->
     <View
@@ -322,5 +385,9 @@
         style="@style/SettingImageView"
         android:onClick="goToSetting"
         android:contentDescription="@string/image_description"/>
+
+    <include
+        android:id="@+id/DifficultyMenu"
+        layout="@layout/colorpuzzle_difficulty_layout" />
 
 </RelativeLayout>
