--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="background">#1a1a1a</color>
     <color name="black">#000000</color>
     <color name="gray">#2a2a2a</color>
+    <color name="charcoal">#333333</color>
     <color name="white">#FFFFFFFF</color>
     <color name="beige">#F9F9EB</color>
     <color name="hint">#b0b0b0</color>
